--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Library</h1>
+    </div>
+
+    <div class="footer">
+        Copyright 2023 JeremyRupprecht
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
