Add button to add books

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <div class="header">
-        <h1>Library</h1>
+        <div class="header-middle">
+            <h1>Library</h1>
+            <h1 class="tempIcon">D/L</h1>
+        </div>
     </div>
+
+    <button class="addBookButton">
+        <h2>+ Add book</h2>
+    </button>
 
     <div class="footer">
         Copyright 2023 JeremyRupprecht
