Add modal prompt with styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
         <h2>+ Add book</h2>
     </button>
 
+    <div class="addBookModal">
+        <form action="" method="post">
+            <h2>Add new book</h2>
+            <input type="text" class="inputField" id="titleInput" placeholder="Title *" name="title">
+            <input type="text" class="inputField" id="authorInput" placeholder="Author *" name="author">
+            <input type="number" class="inputField" id="pagesInput" placeholder="Pages *" name="pages">
+            <div>
+                <label for="readItInput" id="readItlabel">Have you read it?</label>
+                <input type="checkbox" id="readItInput" name="readIt">
+            </div>
+            <button>Submit</button>
+        </form>
+    </div>
+
+
     <div class="footer">
         Copyright 2023 JeremyRupprecht
     </div>
