Open modal on button click and Close modal popup upon outside click

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h2>+ Add book</h2>
     </button>
 
+    <div class="modalBackground"></div>
     <div class="addBookModal">
         <form action="" method="post">
             <h2>Add new book</h2>
