Implement book adding

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <label for="readItInput" id="readItlabel">Have you read it?</label>
                 <input type="checkbox" id="readItInput" name="readIt" value="yes">
             </div>
-            <button type="submit" value="submit">Submit</button>
+            <button type="submit" value="submit" class="submitBook">Submit</button>
         </form>
     </div>
 
