Implement dark-light mode theme change button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="header">
         <div class="header-middle">
             <h1>Library</h1>
-            <h1 class="tempIcon">D/L</h1>
+            <button class="darkLightButton">
+                <img src="images/sun.svg" alt="A sun icon" class="darkLightImage">
+            </button>
         </div>
     </div>
 
